fix: spacing tightened in PokemonCard and PokemonModal

--- a/src/components/PokemonCard/PokemonCard.module.scss
+++ b/src/components/PokemonCard/PokemonCard.module.scss
@@ -46,7 +46,7 @@
 
   &__basicInfo {
     @include pokeCardDetail-flex-column();
-    gap: var(--gap-12);
+    gap: var(--gap-8);
 
     &-measurements {
       @include pokeCardDetail-flex-gap-20();
