--- a/src/components/PokemonModal/pokemonModal.module.scss
+++ b/src/components/PokemonModal/pokemonModal.module.scss
@@ -39,7 +39,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--gap-28);
+  gap: var(--gap-20);
 
   animation: enterLeft 0.5s;
   animation-timing-function: cubic-bezier(0.82, 0, 0.28, 0.99);
